# esp-claw

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  index.html
.github/workflows/: build-and-deploy.yml  deploy-docs-pages.yml
.gitlab/ci/: astyle-rules.yml  build.yml  build_apps.py
application/basic_demo/: CMakeLists.txt  partitions_16MB.csv  partitions_4MB.csv  partitions_8MB.csv  sdkconfig.defaults
application/basic_demo/main/: CMakeLists.txt  Kconfig.projbuild  app_claw.c  app_clawgent.c  app_expression_emote.c  basic_demo_cli.c  basic_demo_lua_modules.c  basic_demo_wifi.c  basic_demo_wifi.h  captive_dns.c  captive_dns.h  config_http_server.c  idf_component.yml  main.c
components/cap_lua/: CMakeLists.txt
components/cap_lua/src/: cap_lua.c  cap_lua_internal.h
components/claw_modules/claw_core/: CMakeLists.txt
components/lua_modules/esp_painter/: esp_painter.c
components/lua_modules/lua_module_audio/: CMakeLists.txt  idf_component.yml  lua_module_audio.c
components/lua_modules/lua_module_board_manager/: CMakeLists.txt  lua_module_board_manager.c
components/lua_modules/lua_module_button/: CMakeLists.txt
components/lua_modules/lua_module_camera/: CMakeLists.txt  idf_component.yml
components/lua_modules/lua_module_display/: CMakeLists.txt  (+1 more)
docs/: astro.config.mjs
lua_modules/lua_module_delay/: CMakeLists.txt
lua_modules/lua_module_event_publisher/: CMakeLists.txt
lua_modules/lua_module_gpio/: CMakeLists.txt
lua_modules/lua_module_led_strip/: CMakeLists.txt
lua_modules/lua_module_storage/: CMakeLists.txt
(+111 files in other folders)
